--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
   "name": "mandc",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "MiedoandCodicia - App de noticias cripto con swipe tipo Tinder",
+  "keywords": [
+    "crypto",
+    "news",
+    "swipe",
+    "react",
+    "pwa",
+    "bitcoin",
+    "blockchain"
+  ],
+  "author": "MiedoandCodicia Team",
+  "license": "MIT",
+  "homepage": "https://mandc.bitsdeve.com",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "react-spring": "^10.0.1",
+    "axios": "^1.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
-    "web-vitals": "^2.1.4",
-    "workbox-webpack-plugin": "^7.3.0"
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && npx serve -s build -l 3000"
   },
   "eslintConfig": {
     "extends": [
@@ -39,10 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^4.1.10"
   }
 }
