--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
     "web-vitals": "^2.1.4"
@@ -34,7 +34,8 @@
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "start:host": "HOST=0.0.0.0 GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
